# babeltower-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: config.yaml  intent.yaml  query.yaml
src/babeltower_agent/: cli.py  client.py  config.py  control.py  crypto.py  llm.py  mcp_server.py  prompt.py  session.py
tests/: test_client.py  test_config.py  test_control.py  test_crypto.py  test_llm.py  test_mcp_server.py  test_prompt.py  test_session.py
