[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babeltower-agent"
version = "0.1.0"
description = "Reference CLI agent for the BabelTower protocol"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "anthropic>=0.69",
  "cryptography>=42",
  "httpx>=0.27",
  "mcp>=1.2",
  "openai>=1.80",
  "pyyaml>=6",
  "typer>=0.12",
  "websockets>=13",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[project.scripts]
babeltower-agent = "babeltower_agent.cli:app"
babeltower-mcp = "babeltower_agent.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
